# QuteStyle

./: .codecov.yml  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  Autoupdate.py  LICENSE  README.md  azure-pipelines.yml  deploy.py  dev_requirements.txt  helper.py  pull_request_template.md  pyproject.toml  pytest.ini  requirements.txt  settings.py  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  lint.yml  publish.yml  publish_test.yml  pylint.yml  test.yml  type_check.yml
dev_config/: mypy.ini  profile.yaml
dev_config/.github/workflows/: test.yml
dev_scripts/: compile_ui_files.py  generate_documentation.py  generate_rc.py  kernprof.py  setup_test_db.py
dev_scripts/color_schemes/: darcula.css  darcula.html  garching_gray.css  garching_gray.html  main.css  princess_pink.css  princess_pink.html  ruby_red.css  ruby_red.html  snow_white.css  snow_white.html
docs/: README.md  qs_main_window.md  style.md  widgets.md
examples/: main.py  sample_classes.py  sample_main_window.py  sample_widgets.py  styled_main_window.py
examples/test_changelog/1.01/: 1.json  2.json
examples/test_changelog/1.10/: 1.json  2.json
examples/test_changelog/1.100/: 1.json
generated_models/: edoc_database_generated.py  pse_database_generated.py
queries/: table_size.sql
qute_style/: helper.py  qs_application.py  qs_main_window.py  qs_message_box.py  qute_style.py  resources_rc.py  startup_threads.py  style.py  update_window.py  version.py  whats_new_window.py
qute_style/dev/: dev_functions.py  mocks.py
qute_style/ui/: test_window.ui  whats_new_window.ui
qute_style/widgets/: background_frame.py  base_widgets.py  color_manager.py  credit_bar.py  custom_icon_engine.py  custom_tree_view.py  div.py  drop_label.py  grips.py  home_page.py  icon.py  icon_button.py  icon_tooltip_button.py  left_column.py  left_column_close_button.py  left_menu.py  left_menu_button.py  spinner.py  styled_combobox.py  text_truncator.py  title_bar.py  title_button.py  toggle.py  tooltip.py
qute_style_examples/: __main__.py  main.py  sample_classes.py  sample_main_window.py  sample_widgets.py
qute_style_examples/test_changelog/1.01/: meta.json
qute_style_examples/test_changelog/1.10/: meta.json
qute_style_examples/test_changelog/1.100/: 1.json  2.json  meta.json
tests/: __init__.py  conftest.py  mocks.py  test_checkbox.py  test_copy_worker.py  test_custom_icon_engine.py  test_custom_tree_view.py  test_database_functions.py  test_excepthook.py  test_helper.py  test_homepage.py  test_icon_button.py  test_init.py  test_left_column.py  test_qs_application.py  test_qs_main_window.py  test_qs_message_box.py  test_qute_style.py  test_startup_threads.py  test_style.py  test_title_bar.py  test_tsl_application.py  test_tsl_style.py  test_tsl_style_main_window.py  test_update_window.py  test_updater.py  test_vault.py
tests/test_images/: default_pixmap.ppm  new_pixmap.ppm
tests/test_procedures/: SP_NAV_INSERT_PACKAGE.sql  SP_NAV_INSERT_PACKAGE_WITH_FILTER.sql
tests/test_widgets/: conftest.py  test_checkable_combobox.py  test_drop_label.py  test_grips.py  test_icon.py  test_spinner.py  test_text_truncator.py  test_toggle.py
tsl/: Autoupdate.py  __init__.py  common_db.py  copy_worker.py  edoc_database.py  edoc_database_functions.py  edoc_database_generated.py  helper.py  init.py  main.py  pse_database.py  pse_database_generated.py  resources_rc.py  settings.py  startup_threads.py  style.py  tsl_application.py  tsl_main_gui.py  tsl_message_box.py  tsl_style.py  update_window.py  updater.py  variables.py  vault.py  version.py  whats_new_window.py
tsl/dev/: dev_functions.py  mocks.py
tsl/ui/: test_window.ui  whats_new_window.ui
tsl/widgets/: background_frame.py  base_widgets.py  color_manager.py  credit_bar.py  custom_icon_engine.py  drop_label.py  grips.py  home_page.py  icon.py  icon_button.py  icon_tooltip_button.py  left_column.py  left_column_close_button.py  left_menu.py  left_menu_button.py  styled_checkbox_delegate.py  styled_combobox.py  text_truncator.py  title_bar.py  title_button.py  toggle.py  tooltip.py
