[tool.poetry]
name = "qute_style"
version = "1.0.6"
description = "QuteStyle is an expandable application framework for PySide6"
authors = ["Marina Baumgartner, Dairen Gonschior, Tilman Krummeck, Dennis Spitzhorn, Gerhard Trapp, Patrick Zwerschke <PS-TF-Entwicklung@tuev-sued.de>"]
readme = "README.md"
repository = "https://github.com/TUV-SUD-Product-Service-GmbH/QuteStyle"
license = "MIT"
packages = [
    {include = "qute_style"},
    {include = "qute_style_examples"},
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
PySide6 = "6.5.1.1"

[tool.poetry.dev-dependencies]
pytest = "7.3.1"
pytest-qt = "4.2.0"
requests = "2.31.0"
black = "23.3.0"
coverage = "7.2.3"
isort = "5.12.0"
mypy = "1.4.1"
pre-commit = "3.2.2"
pydocstyle = "6.3.0"
pylint = "^2.17.3"
pytest-cov = "^4.0.0"
pytest-github-actions-annotate-failures = "^0.1.8"
types-requests = "2.31.0.0"


[tool.poetry.scripts]
qute-style-example = "qute_style_examples.main:main_method"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
